# double_pendulum_cpp

./: README.md
include/: config.h  doublependulum.h  dp_frame.h  drawing_pane.h  drawing_panel.h  gonio_funcs.h  main_panel.h  monitor_panels.h  objects.h
src/: CMakeLists.txt  double_pendulum.cpp  doublependulum.cpp  dp_app.cpp  dp_frame.cpp  drawing_pane.cpp  drawing_panel.cpp  gonio_funcs.cpp  main_panel.cpp  monitor_panels.cpp  objects.cpp
